<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical" >

    <GridLayout
        android:id="@+id/TransactionMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="3" >

        <Button
            android:id="@+id/button1"
            style="@style/ButtonStyle"
            android:layout_width="@dimen/item_transaction_layout_width"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_marginBottom="@dimen/item_transaction_margin_bottom"
            android:layout_marginLeft="@dimen/item_transaction_margin_left"
            android:layout_marginRight="@dimen/item_transaction_margin_right"
            android:layout_marginTop="@dimen/item_transaction_margin_top"
            android:layout_row="0"
            android:onClick="scheduler"
            android:text="@string/settings_options_1" />

        <Button
            android:id="@+id/button2"
            style="@style/ButtonStyle"
            android:layout_width="@dimen/item_transaction_layout_width"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_marginBottom="@dimen/item_transaction_margin_bottom"
            android:layout_marginLeft="@dimen/item_transaction_margin_left"
            android:layout_marginRight="@dimen/item_transaction_margin_right"
            android:layout_marginTop="@dimen/item_transaction_margin_top"
            android:layout_row="0"
            android:onClick="playAll"
            android:text="@string/settings_options_2" />

        <Button
            android:id="@+id/button3"
            style="@style/ButtonStyle"
            android:layout_width="@dimen/item_transaction_layout_width"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_marginBottom="@dimen/item_transaction_margin_bottom"
            android:layout_marginLeft="@dimen/item_transaction_margin_left"
            android:layout_marginRight="@dimen/item_transaction_margin_right"
            android:layout_row="1"
            android:onClick="lastPlayed"
            android:text="@string/settings_options_3" />

        <Button
            android:id="@+id/button4"
            style="@style/ButtonStyle"
            android:layout_width="@dimen/item_transaction_layout_width"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_marginBottom="@dimen/item_transaction_margin_bottom"
            android:layout_marginLeft="@dimen/item_transaction_margin_left"
            android:layout_marginRight="@dimen/item_transaction_margin_right"
            android:layout_row="1"
            android:onClick="wordForTheDay"
            android:text="@string/settings_options_4" />

        <Button
            android:id="@+id/button5"
            style="@style/ButtonStyle"
            android:layout_width="@dimen/item_transaction_layout_width"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_marginBottom="@dimen/item_transaction_margin_bottom"
            android:layout_marginLeft="@dimen/item_transaction_margin_left"
            android:layout_marginRight="@dimen/item_transaction_margin_right"
            android:layout_row="2"
            android:onClick="shareApp"
            android:text="@string/settings_options_5" />

        <Button
            android:id="@+id/button6"
            style="@style/ButtonStyle"
            android:layout_width="@dimen/item_transaction_layout_width"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_marginBottom="@dimen/item_transaction_margin_bottom"
            android:layout_marginLeft="@dimen/item_transaction_margin_left"
            android:layout_marginRight="@dimen/item_transaction_margin_right"
            android:layout_row="2"
            android:onClick="rateApp"
            android:text="@string/settings_options_6" />
    </GridLayout>

</LinearLayout>