<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="profileImageEvent" >

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/paybills_ng_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:text="@string/video_list_header"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/main_color_3"
                android:drawableLeft="@android:drawable/ic_media_previous"
                android:onClick="prevVideo"
                android:padding="5dp"
                android:text="@string/prev_video"
                android:textColor="@color/white_color"
                android:textStyle="bold" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@color/main_color_3"
                android:drawableRight="@android:drawable/ic_media_next"
                android:onClick="nextVideo"
                android:padding="5dp"
                android:text="@string/next_video"
                android:textColor="@color/white_color"
                android:textStyle="bold" />

        </RelativeLayout>

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.59"
            android:choiceMode="singleChoice"
            android:soundEffectsEnabled="true" >
        </ListView>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3" >

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@color/black_color"
                android:contentDescription="@string/pictureConDes"
                android:onClick="openSettingsOptions"
                android:src="@drawable/footer_menu" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/footerBtnMarginLeft"
                android:layout_weight="0.9"
                android:background="@color/black_color"
                android:contentDescription="@string/pictureConDes"
                android:onClick="openAudios"
                android:src="@drawable/footer_audios" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/footerBtnMarginLeft"
                android:layout_weight="0.9"
                android:background="@color/main_color_3"
                android:contentDescription="@string/pictureConDes"
                android:src="@drawable/footer_videos" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/footerBtnMarginLeft"
                android:layout_weight="0.9"
                android:background="@color/black_color"
                android:contentDescription="@string/pictureConDes"
                android:onClick="openOnlineResource"
                android:src="@drawable/footer_payment" />
        </LinearLayout>
    </LinearLayout>

    <!-- The navigation drawer -->

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="@dimen/dashboardDrawerWidth"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/black_color"
        android:choiceMode="singleChoice"
        android:divider="@color/orange_color"
        android:dividerHeight="0.8dp"
        android:paddingBottom="@dimen/dashboardDrawerPadding"
        android:paddingTop="@dimen/dashboardDrawerPadding" />

</android.support.v4.widget.DrawerLayout>